Fix clouds overlappung

--- a/src/components/styles/content.scss
+++ b/src/components/styles/content.scss
@@ -45,7 +45,7 @@
 
 .content-text {
   font-family: 'Roboto-medium';
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .content-text-wrapper {
@@ -73,6 +73,10 @@
 
   .content-content-box.inverted {
     order: 1;
+  }
+
+  .content-text {
+    font-size: 17px;
   }
 
 }
